welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:3: error: not found: value length
  for (i <- 0 to length.nums-1){
                 ^